@@ -27,7 +27,6 @@
 #define OPENVAS_NETWORK_H
 
 #include <sys/select.h> /* at least for fd_set */
-#include <gnutls/gnutls.h>
 #include <netinet/in.h> /* struct in_addr, struct in6_addr */
 
 #include <gnutls/gnutls.h>
@@ -89,10 +88,10 @@ ovas_server_context_t ovas_server_context_new(int encaps,
 void ovas_server_context_free(ovas_server_context_t);
 int ovas_server_context_attach(ovas_server_context_t ctx, int soc);
 
-int nessus_register_connection(int s, void *ssl,
+int openvas_register_connection(int s, void *ssl,
 			       gnutls_certificate_credentials_t certcred);
-int nessus_deregister_connection(int);
-int nessus_get_socket_from_connection(int);
+int openvas_deregister_connection(int);
+int openvas_get_socket_from_connection(int);
 gnutls_session_t* ovas_get_tlssession_from_connection(int);
 
 int stream_zero(fd_set*);
