@@ -1,6 +1,6 @@
 #ifndef LIBNESSUS_RAND_H
 #define LIBNESSUS_RAND_H
 
-void nessus_init_random();
+void openvas_init_random();
 
 #endif
