@@ -1,3 +1,12 @@
+2009-09-16 Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* misc/rand.c, misc/network.c, misc/plugutils.c, misc/services1.c,
+	misc/services.c, nasl/nasl_socket.c: Replaced "nessus" by
+	"openvas" in function and struct names.
+
+	* misc/rand.h, misc/network.h, misc/plugutils.h, misc/services1.h,
+	misc/services.h: Adjusted protos accordingly.
+
 2009-09-15 Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* doc/openvas-nasl.1, misc/arglists.c, misc/openvas_ssh_login.c,
